fix: socials buttons not being pressed on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -305,6 +305,7 @@ nav {
   margin: 0;
   padding: 0;
   padding-top: 4rem;
+  flex-direction: row;
 }
 
 #socials li {
@@ -369,7 +370,7 @@ nav {
   transform: rotate(0deg) skewX(-45deg);
 }
 
-#socials li a:hover {
+#socials li a:hover, #socials li a:active {
   transform: rotate(-30deg) skew(25deg) translate(20px,-15px);
   box-shadow: -50px 50px 50px rgba(0,0,0,.5);
 }
@@ -379,14 +380,68 @@ nav {
   color: #fff;
 }
 
-#socials li:hover:nth-child(1) a       { background: #4a4e5a; }
-#socials li:hover:nth-child(1) a:before { background: #3a3e48; }
-#socials li:hover:nth-child(1) a:after  { background: #5a5e6a; }
+#socials li:hover:nth-child(1) a,
+#socials li:active:nth-child(1) a       { background: #4a4e5a; }
+#socials li:hover:nth-child(1) a:before,
+#socials li:active:nth-child(1) a:before { background: #3a3e48; }
+#socials li:hover:nth-child(1) a:after,
+#socials li:active:nth-child(1) a:after  { background: #5a5e6a; }
 
-#socials li:hover:nth-child(2) a       { background: #5865f2; }
-#socials li:hover:nth-child(2) a:before { background: #4753c5; }
-#socials li:hover:nth-child(2) a:after  { background: #6476e6; }
+#socials li:hover:nth-child(2) a,
+#socials li:active:nth-child(2) a       { background: #5865f2; }
+#socials li:hover:nth-child(2) a:before,
+#socials li:active:nth-child(2) a:before { background: #4753c5; }
+#socials li:hover:nth-child(2) a:after,
+#socials li:active:nth-child(2) a:after  { background: #6476e6; }
 
-#socials li:hover:nth-child(3) a       { background: #dd4b39; }
-#socials li:hover:nth-child(3) a:before { background: #b33a2b; }
-#socials li:hover:nth-child(3) a:after  { background: #e66a5a; }
+#socials li:hover:nth-child(3) a,
+#socials li:active:nth-child(3) a       { background: #dd4b39; }
+#socials li:hover:nth-child(3) a:before,
+#socials li:active:nth-child(3) a:before { background: #b33a2b; }
+#socials li:hover:nth-child(3) a:after,
+#socials li:active:nth-child(3) a:after  { background: #e66a5a; }
+
+@media only screen and (max-width: 768px) {
+  #socials {
+    padding-top: 2rem;
+    flex-direction: column;
+  }
+  
+  #socials li {
+    margin: 10px 5px; 
+  }
+  
+  #socials li a {
+    width: 150px;
+    height: 60px;
+    padding-left: 15px;
+  }
+  
+  #socials li a .fa-brands {
+    font-size: 30px;
+    line-height: 60px;
+  }
+  
+  #socials li a span {
+    top: 20px;
+    font-size: 14px;
+    letter-spacing: 2px;
+  }
+  
+  #socials li a:before {
+    top: 8px;
+    left: -15px;
+    width: 15px;
+  }
+  
+  #socials li a:after {
+    bottom: -15px;
+    left: -8px;
+    height: 15px;
+  }
+
+  #socials li a:hover, #socials li a:active {
+    transform: rotate(-30deg) skew(25deg) translate(15px,-10px);
+    box-shadow: -30px 30px 30px rgba(0,0,0,.5);
+  }
+}
